feat: add `tmux` config

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -13,7 +13,7 @@ bindings = [
   # CMD + t: New tab (new tmux window)
   { key = "T", mods = "Command", command = { program = "/opt/homebrew/bin/tmux", args = [
     "new-window",
-    "/usr/local/bin/zsh",
+    "/opt/homebrew/bin/zsh",
   ] } },
   # CMD + w: Close pane (close tmux pane)
   { key = "W", mods = "Command", command = { program = "/opt/homebrew/bin/tmux", args = [
