--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,12 +1,9 @@
-import = [
-  "~/.config/alacritty/themes/catppuccin-macchiato.toml"
-]
 
 [font.normal]
 family = "Hack Nerd Font Mono"
 
 [font]
-size = 14.0
+size = 12.0
 
 [keyboard]
 bindings = [
@@ -108,3 +105,8 @@ bindings = [
 
 [env]
 TERM = "xterm-256color"
+
+[general]
+import = [
+  "~/.config/alacritty/themes/catppuccin-macchiato.toml"
+]
