--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -12,6 +12,12 @@ bind C-Space send-prefix
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Resize panes with Ctrl+arrow keys (no prefix needed)
+bind -n C-Left resize-pane -L 1
+bind -n C-Right resize-pane -R 1
+bind -n C-Up resize-pane -U 1
+bind -n C-Down resize-pane -D 1
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
